--- a/src/dnft_frontend/src/index.html
+++ b/src/dnft_frontend/src/index.html
@@ -3,19 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>dnft</title>
+    <title>aVa dNFT prototype</title>
     <base href="/" />
     <link rel="icon" href="favicon.ico" />
     <link type="text/css" rel="stylesheet" href="main.css" />
   </head>
   <body>
     <main>
-      <img src="logo2.svg" alt="DFINITY logo" />
+      <img src="logo.png" alt="aVa logo" />
       <br />
+      <br />
+      <form>
+        <button id="login">Login!</button>
+      </form>
       <br />
       <form action="#">
-        <label for="name">Enter your name: &nbsp;</label>
-        <input id="name" alt="Name" type="text" />
+        <!-- <label for="name">Enter your name: &nbsp;</label>
+        <input id="name" alt="Name" type="text" /> -->
         <button type="submit">Click Me!</button>
       </form>
       <section id="greeting"></section>
