--- a/src/dnft_frontend/src/index.html
+++ b/src/dnft_frontend/src/index.html
@@ -1,28 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>aVa dNFT prototype</title>
-    <base href="/" />
-    <link rel="icon" href="favicon.ico" />
-    <link type="text/css" rel="stylesheet" href="main.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+
+    <!-- <link rel="stylesheet" href="./global.css" /> -->
+    <link rel="stylesheet" href="../assets/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Bruno Ace:wght@400&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Red Hat Text:wght@500;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Red Hat Display:wght@800&display=swap"
+    />
   </head>
   <body>
-    <main>
-      <img src="logo.png" alt="aVa logo" />
-      <br />
-      <br />
-      <form>
-        <button id="login">Login!</button>
-      </form>
-      <br />
-      <form action="#">
-        <!-- <label for="name">Enter your name: &nbsp;</label>
-        <input id="name" alt="Name" type="text" /> -->
-        <button type="submit">Click Me!</button>
-      </form>
-      <section id="greeting"></section>
-    </main>
+    <div class="desktop-3">
+      <div class="desktop-3-inner">
+        <div class="frame-parent">
+          <div class="logo-wrapper">
+            <img class="logo-icon" alt="" src="../assets/logo.png" id="logo" />
+          </div>
+          <div class="frame-wrapper">
+            <div class="frame">
+              <div class="avaname">
+                <div class="ava">aVa</div>
+                <div class="verification">verification</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="menu">
+        <div class="nft1">
+          <button class="button" id="button">NFT</button>
+        </div>
+        <div class="nft1">
+          <button class="button" id="button1">dNFT</button>
+        </div>
+        <div class="login1">
+          <button class="button2" id="button2">Login</button>
+        </div>
+      </div>
+      <div class="center">
+        <div class="center1">
+          <div class="creatednfttext">
+            <b class="text">Creating aVa dNFT </b>
+          </div>
+          <div class="uploadlink">
+            <div class="text1">upload link:</div>
+          </div>
+        </div>
+        <div class="uploadblock-wrapper">
+          <section class="uploadblock">
+            <div class="inputandbutton">
+              <div class="inputblock">
+                <input class="input" id="link" type="text" />
+              </div>
+            </div>
+            <div class="createbuttonblock">
+              <div class="create">
+                <button class="button" id="create">create</button>
+              </div>
+            </div>
+          </section>            
+        </div>
+        <section id="result"></section>
+      </div>
+    </div>
+
+   
   </body>
 </html>
