--- a/src/dnft_frontend/src/index.html
+++ b/src/dnft_frontend/src/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-    <!-- <link rel="stylesheet" href="./global.css" /> -->
-    <link rel="stylesheet" href="../assets/main.css" />
+    <link type="text/css" rel="stylesheet" href="main.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Bruno Ace:wght@400&display=swap"
@@ -24,7 +23,7 @@
       <div class="desktop-3-inner">
         <div class="frame-parent">
           <div class="logo-wrapper">
-            <img class="logo-icon" alt="" src="../assets/logo.png" id="logo" />
+            <img class="logo-icon" alt="" src="logo.png" id="logo" />
           </div>
           <div class="frame-wrapper">
             <div class="frame">
@@ -72,8 +71,6 @@
         </div>
         <section id="result"></section>
       </div>
-    </div>
-
-   
+    </div>   
   </body>
 </html>
