--- a/src/dnft_frontend/src/index.html
+++ b/src/dnft_frontend/src/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
     <link type="text/css" rel="stylesheet" href="main.css" />
+    <link type="text/css" rel="stylesheet" href="new_card.css">
+    <img id="hidden" src="image_rep.svg" style="display:none;">  
+    
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Bruno Ace:wght@400&display=swap"
