--- a/src/dnft_frontend/src/index.html
+++ b/src/dnft_frontend/src/index.html
@@ -20,8 +20,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Red Hat Display:wght@800&display=swap"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Goldman&display=swap">
+
+    <link type="font/ttf" href="Goldman-Regular.ttf" rel="stylesheet">
   </head>
-  <body>
+  <body style="background-image: url('back.png'); background-size: cover;">
     <div class="desktop-3">
       <div class="desktop-3-inner">
         <div class="frame-parent">
@@ -73,6 +76,7 @@
           </section>            
         </div>
         <section id="result"></section>
+        <section id="result2"></section>
       </div>
     </div>   
   </body>
