demo with 2 cards

--- a/src/dnft_frontend/src/index.html
+++ b/src/dnft_frontend/src/index.html
@@ -75,8 +75,14 @@
             </div>
           </section>            
         </div>
-        <section id="result"></section>
-        <section id="result2"></section>
+        <div id="resultcontainer"></div>
+        <div class="card-container" >
+
+          <section id="result"></section>
+          
+          <section id="result2"></section>
+        
+        </div>
       </div>
     </div>   
   </body>
